styles.css
div {
  padding: 0;
  margin: 0;
}

body {
  background-color: #3B3832;
  font-family: Ubuntu;
}

body > * {
  margin: 0 auto;
}

h1 {
  color: #ffd700;
  text-align: center;
  font-size: 50px;
  font-family: 'Bangers';
  font-weight: normal;
  padding-top: 20px;
}
h2 {
  color: #fff;
  text-align: center;
  font-size: 20px;
  font-family: 'Bangers';
  font-weight: normal;
  padding-bottom: 20px;
}

.splash {
  width: 600px;
  margin: 200px auto;
  text-align: center;
}

  .splash h3 {
    font-size: 20px;
    line-height: 30px;
    color: #D2691E;
  }

  .splash p {
    color: #fff;
  }

  .splash button {
    margin-top: 50px;
    width: 300px;
    height: 75px;
    font-size: 50px;
    font-family: Bangers;
    background-color: #76af0a;
    border: 5px solid #304606;
    border-radius: 5px;
    color: #252427;
    box-shadow: 2px 2px #000000;
  }

.hud {
  width: 1040px;
  margin: auto;
  position: relative;
}

  .hud div {
    display: block;
    padding: 30px;

    position: absolute;
    bottom: 50px;
    text-shadow: 2px 2px #000000;
  }

  .hud ul {
    padding: 0;
  }

  .hud li {
    list-style: none;
  }

  .health {
    font-size: 20px;
    color: red;
    font-weight: bold;
    left: 0;
  }

  .events {
    color: #ffd700;
    right: 0;
  }

.dungeon {
  width: 1200px;
  height: 800px;
  background: url("./images/background.jpg");
  border: 15px ridge  #252427;;
  position: relative;
  box-sizing: content-box;
  cursor: crosshair;
  margin: 0 auto;
}


.enemy {
  color: red;
  user-select: none;
}

.entity {
  position: absolute;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  z-index: 30;
}
  .dead {
    opacity: 0.6;
    z-index: 10;
  }
    .dead .weapon {
      z-index: 20;
    }

.weapon {
  user-select: none;
  transform: rotate(45deg);
  transform-origin: right;
  position: absolute;
  margin: -10px;
  z-index: 40;
  transition-property: all;
  transition-duration: .5s;
  transition-timing-function: ease-in-out;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  pointer-events: none;
}

.weapon.attacking {
  transform: rotate(-45deg);
  transition-property: all;
  transition-duration: .5s;
  transition-timing-function: ease-in-out;
}

/* entity classes */

  .hero {
    background-image: url("./images (copy)/cat-hero.png");
    height: 50px;
    width: 50px;
  }
    .hero .weapon {
      top: 6px;
      right: 40px;
    }

  .snake {
    background-image: url("./images/snake-1.png");
    height: 100px;
    width: 100px;
  }
    .snake .weapon {
      top: -19px;
      right: 85px;
    }

  .spider {
    background-image: url("./images/spider-1.png");
    height: 100px;
    width: 100px;
  }
    .spider .weapon {
      top: 14px;
      right: 72px;
    }

  .rat {
    background-image: url("./images/rat-1.png");
    height: 100px;
    width: 100px;
  }
    .rat .weapon {
      top: 30px;
      right: 78px;
    }

  .dragon {
    background-image: url("./images/dragon.png");
    height: 200px;
    width: 200px;
  }
    .dragon .weapon {
      top: 50px;
      right: 145px;
    }

  .bat {
    background-image: url("./images/bat.png");
    height: 100px;
    width: 100px;
  }
    .bat .weapon {
      top: -5px;
      right: 95px;
    }

  .grub {
    background-image: url("./images/grub.png");
    height: 100px;
    width: 100px;
  }
    .grub .weapon {
      top: 32px;
      right: 92px;
    }

  .hand {
    background-image: url("./images/hand.png");
    height: 100px;
    width: 100px;
  }
    .hand .weapon {
      top: 21px;
      right: 69px;
    }

  .skeleton {
    background-image: url("./images/skeleton.png");
    height: 200px;
    width: 200px;
  }
    .skeleton .weapon {
      top: -11px;
      right: 90px;
    }

  .t-rex {
    background-image: url("./images/t-rex.png");
    height: 200px;
    width: 200px;
  }
    .t-rex .weapon {
      top: 60px;
      right: 172px;
    }

  .john-cena {
    background-image: url("./images/john-cena.png");
    height: 200px;
    width: 200px;
  }
    .john-cena .weapon {
      top: 11px;
      right: 121px;
    }

/* weapon classes */

  .ax {
    background-image: url("./images/ax.png");
    height: 100px;
    width: 100px;
  }

  .knife {
    background-image: url("./images/knife-1.png");
    height: 50px;
    width: 50px;
  }

  .lightsaber {
    background-image: url("./images/lightsaber_blue.png");
    height: 100px;
    width: 100px;
  }

  .ak47 {
    background-image: url("./images/ak47.png");
    height: 100px;
    width: 100px;
  }

  .baseball-bat {
    background-image: url("./images/baseball-bat.png");
    height: 100px;
    width: 100px;
  }

  .crowbar {
    background-image: url("./images/crowbar.png");
    height: 100px;
    width: 100px;
  }

  .spear {
    background-image: url("./images/spear.png");
    height: 200px;
    width: 200px;
  }

  .buster {
    background-image: url("./images/sword-buster.png");
    height: 100px;
    width: 100px;
  }

  .flames {
    background-image: url("./images/flames.png");
    height: 120px;
    width: 120px;
  }

  .hearts {
    background-image: url("./images/hearts.png");
    height: 100px;
    width: 100px;
  }

